fixed hero spacing issues

--- a/src/styles/_badges.scss
+++ b/src/styles/_badges.scss
@@ -13,6 +13,6 @@
 }
 
 .badges-wrapper {
-  min-height: 75px;
-  background: pink;
+  height: 166px;
+  background: white;
 }
