--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,10 +3,10 @@
   height: 100vh;
   position: relative;
   z-index: 2;
+  overflow: hidden;
   &-title {
     @extend .h1;
     position: absolute;
-    line-height: 250px;
     top: 35%;
     transform: translateY(-50%);
     width: 100%;
@@ -37,10 +37,9 @@
     background-image: linear-gradient(to bottom, rgba(black,0) 0%, rgba(black,1) 92%, rgba(black,0) 100%);
     opacity: 10%;
     width: 100%;
-    height: 270px;
+    height: 50%;
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
-    margin-top: -300px;
   }
 }
