--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -34,6 +34,8 @@
     background-color: #2b6596;
     .hero-title {
       color: #5abed7;
+      font-size: 260px;
+      line-height: 220px;
     }
     .project-preview:before {
       background-image: url('/assets/worldvision-background.png');
